--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,12 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.transpant"/>
 
+        <activity
+            android:name=".activity.ChooseCityActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.transpant"/>
+
     </application>
 
 </manifest>
